--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -62,6 +62,9 @@
     "reload": "Recharger",
     "title": "Erreur inconnue"
   },
+  "escrow_verification": {
+    "person_and_health_expert": "Une personne qui parle à un expert de la santé"
+  },
   "export": {
     "code_input_body_bluetooth": "Entrez votre code de vérification",
     "code_input_button_cancel": "Annuler",
@@ -75,6 +78,7 @@
     "consent_subheader_1": "Pourquoi devrais-je partager?",
     "consent_subheader_2": "Comment ça marche?",
     "enable_exposure_notifications_body": "Vous devez activer les notifications d'exposition pour signaler un résultat de test positif.",
+    "enable_exposure_notifications_button": "Activer les notifications d'exposition",
     "enable_exposure_notifications_title": "Activer les notifications d'exposition pour continuer",
     "error": {
       "invalid_code": "Essayez un autre code",
@@ -144,6 +148,10 @@
     "why_did_i_get_an_en": "Pourquoi ai-je reçu une notification d'exposition ?",
     "why_did_i_get_an_en_para": "Vous recevrez une notification d'exposition lorsqu'une personne avec qui vous avez été à proximité plus tard reçoit un test positif au COVID-19 et choisit d'en informer les autres."
   },
+  "exposure_notification_alerts": {
+    "cant_check_for_exposures_button": "Activer les notifications d'exposition",
+    "use_exposure_notifications_android_title": "Activer les notifications d'exposition"
+  },
   "exposure_scanning_status": {
     "fix_this": "Répare ça",
     "learn_more": "En savoir plus",
@@ -174,17 +182,11 @@
     "fix": "Résoudre les problèmes avec {{technology}}",
     "get_more_info": "Obtenez plus d'informations sur {{technology}}",
     "have_a_positive_test": "Vous avez un code de résultat de test positif?",
-    "if_you_have_a_code": "Signalez votre résultat pour assurer la sécurité de votre communauté.",
     "not_feeling_well": "Vous ne vous sentez pas bien ?",
     "proximity_tracing_info_body_1": "Si les smartphones avec l'application installée sont allumés avec le Bluetooth allumé et ils sont proches les uns des autres pendant un certain temps, une rencontre est enregistrée sur votre appareil.",
     "proximity_tracing_info_body_2": "En cas de rencontre, vos données et informations restent anonymes. L'application ne stocke aucune donnée personnelle. Seuls les identifiants aléatoires sont échangés. Ceux-ci sont supprimés dans les 14 jours.",
     "proximity_tracing_info_subheader_1": "Comment fonctionnent les notifications d'exposition?",
     "proximity_tracing_info_subheader_2": "Mes données sont-elles sécurisées?",
-    "proximity_tracing": {
-      "unauthorized_error_message_android": "Pour activer les notifications d'exposition, accédez aux notifications d'exposition COVID-19 de votre application Paramètres et activez `` Utiliser les notifications d'exposition ''",
-      "unauthorized_error_message_ios": "Pour activer les notifications d’exposition, accédez à la section Notification d’exposition dans Paramètres et partagez les informations d’exposition et définissez la région active sur {{applicationName}}",
-      "unauthorized_error_title": "Activer les notifications d'exposition"
-    },
     "request_call": "Demander un appel",
     "take_assessment": "Passer une évaluation",
     "to_submit_your_test": "Pour soumettre votre résultat de test positif, vous devrez obtenir votre code de résultat de test positif à partir d'un traceur de contact."
