--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -268,7 +268,7 @@
     "app_setup_complete_header": "App Setup Complete!",
     "app_setup_incomplete_body": "{{applicationName}} requires Exposure Notifications and Bluetooth permissions to know when you have been exposed to COVID-19. You can authorize this in Settings.",
     "app_setup_incomplete_header": "App Setup Incomplete",
-    "app_setup_incomplete_location_body": "{{applicationName}} requires Exposure Notifications, Bluetooth, and Location permissions to know when and when you have been exposed to COVID-19. You can authorize this in Settings.",
+    "app_setup_incomplete_location_body": "{{applicationName}} requires Exposure Notifications, Bluetooth, and Location permissions to know when you have been exposed to COVID-19. You can authorize this in Settings.",
     "bluetooth_alert_body": "To use Bluetooth scanning, the device Bluetooth setting needs to be turned on.",
     "bluetooth_alert_header": "Activate Bluetooth",
     "bluetooth_body": "To use Bluetooth scanning, the device Bluetooth setting must be turned on.",
