--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -78,13 +78,13 @@
     },
     "person_and_health_expert": "Una persona hablando con personal médico",
     "start": {
-      "body": "Si ha dado positivo por COVID-19 (no a través de una prueba de anticuerpos), puede informar la prueba de forma anónima.\n\nInformar su prueba ayudará a otros miembros de su comunidad a contener la propagación del virus.",
-      "header": "Informar una prueba positiva",
-      "what_is_a_verification_code": "¿Qué es un código de verificación?"
+      "body": "Si el resultado de su prueba para COVID-19 fue positivo (no a través de una prueba de anticuerpos), puede informar sobre la prueba de forma anónima.\n\nInformar sobre su prueba ayudará a otros en su comunidad a contener la propagación del virus.",
+      "header": "Informar sobre una prueba positiva",
+      "what_is_a_verification_code": "¿Qué es el código de verificación?"
     },
     "user_details_form": {
       "phone_number": "Número de teléfono",
-      "subheader": "Proporcione su número de teléfono y la fecha de la prueba y le enviaremos un mensaje de texto con su código de verificación.",
+      "subheader": "Indique la fecha de su prueba y su número de teléfono.",
       "test_date": "Fecha de la prueba",
       "test_details": "Detalles de la prueba"
     }
@@ -107,7 +107,7 @@
     "enable_exposure_notifications_body": "Debe activar los avisos de exposición para informar de un resultado positivo.",
     "enable_exposure_notifications_button": "Habilitar Avisos de Exposición",
     "enable_exposure_notifications_title": "Active las notificaciones de exposición para continuar",
-    "enter_verification_code": "Ingrese el código de verificación",
+    "enter_verification_code": "Introduzca el código de verificación",
     "error": {
       "invalid_code": "Intentar con otro código",
       "invalid_format": "Los códigos pueden contener solo números y letras",
@@ -117,10 +117,10 @@
       "verification_code_used": "El código de verificación ya fue usado"
     },
     "intro": {
-      "body1": "Si recibió un código de verificación de {{healthAuthorityName}} para una prueba COVID-19 positiva, puede enviar el código de verificación en la siguiente pantalla.",
-      "body2": "Si no tiene un código, pero tiene una prueba positiva, deberá obtener un código de verificación de {{healthAuthorityName}}  antes de continuar.",
-      "header": "Si recibió un código de verificación de 1: Health Authority Name para una prueba COVID-19 positiva, puede enviar el código de verificación en la siguiente pantalla.",
-      "what_is_a": "¿Qué es un código de verificación?"
+      "body1": "Si ha recibido un código de verificación de {{healthAuthorityName}} por un resultado positivo a la prueba de COVID-19, envíe este código en la pantalla siguiente.",
+      "body2": "Si no tiene código, pero tiene un resultado positivo a la prueba, tendrá que obtener un código de {{healthAuthorityName}} antes de continuar.",
+      "header": "¿Tiene el código de verificación?",
+      "what_is_a": "¿Qué es el código de verificación?"
     },
     "never_mind_button_title": "No importa",
     "person_and_health_expert": "Una persona hablando con personal médico",
@@ -140,13 +140,13 @@
       }
     },
     "start_header_bluetooth": "Ayude a contener la propagación del virus y proteja a otros en su comunidad",
-    "submit_code": "Ingrese el código",
+    "submit_code": "Envíe el código",
     "verification_code_info": {
-      "how_do_i_get_body": "Póngase en contacto con su autoridad sanitaria, {{healthAuthorityName}}.",
-      "how_do_i_get_header": "¿Cómo obtengo un código de verificación?",
-      "info_body": "Un código de verificación es un código que le proporciona su autoridad sanitaria, {{healthAuthorityName}}, si recibe un resultado positivo en la prueba.\n\nEl código de verificación se utiliza para verificar que el resultado positivo de su prueba sea auténtico.\n\nCada código de verificación caducará después de un período breve para garantizar que no se envíen los resultados de las pruebas obsoletas.\n\nSi encuentra un error al enviar su código de verificación, debe obtener un nuevo código de su autoridad sanitaria antes de volver a enviarlo.",
-      "info_header": "¿Qué es un código de verificación?",
-      "what_happens_body": "Cuando envíe su código de verificación, la aplicación le pedirá que comparta las claves de exposición anónimas aleatorias de otros dispositivos a los que se haya conectado.\n\nSi da permiso, la aplicación enviará estas claves a un servidor de notificación de exposición. El servidor de notificaciones notificará a los dispositivos a los que se ha conectado el resultado positivo de la prueba.\n\nLa aplicación nunca recopila ni almacena información personal. Solo se comparten las claves anónimas aleatorias almacenadas en su dispositivo.",
+      "how_do_i_get_body": "Póngase en contacto con su autoridad de salud, {{healthAuthorityName}}",
+      "how_do_i_get_header": "¿Cómo obtengo el código de verificación?",
+      "info_body": "Un código de verificación es un código que le entrega su autoridad de salud {{healthAuthorityName}} cuando obtiene un resultado positivo a la prueba.\n\nEste código se utiliza para verificar que los resultados positivos de su prueba sean auténticos.\n\nCada código de verificación caduca después de un corto período de tiempo para asegurarnos de que no se presenten resultados de pruebas ya vencidos.\n\nSi encuentra un error al enviar su código de verificación, deberá obtener uno nuevo de la autoridad de salud antes de enviarlo otra vez.",
+      "info_header": "¿Qué es el código de verificación?",
+      "what_happens_body": "Cuando envía su código de verificación, la aplicación le pedirá que comparta claves aleatorias de exposición de otros dispositivos con los cuales se haya conectado.\n\nSi usted otorga el permiso, la aplicación enviará estas claves a un servidor de notificaciones de exposición. El servidor de notificaciones notificará los resultados positivos de su prueba a los dispositivos con los que se haya conectado. \n\nLa aplicación nunca guarda su información personal. Solamente se comparten claves aleatorias anónimas en su dispositivo.",
       "what_happens_header": "¿Qué sucede cuando envío mi código?"
     }
   },
@@ -183,7 +183,7 @@
     "how_does_this_work_para": "Cuando las Notificaciones de Exposición están activadas, su teléfono usará Bluetooth para intercambiar y guardar cadenas de carácteres aleatorios (llamadas identificaciones aleatorias) de aquellos teléfonos que tengan también las Notificaciones de Exposición activadas. Estas cadenas de caracteres aleatorios no le identificarán personalmente a los otros usuarios y varían muchas veces al día para proteger su privacidad. La fecha y duración de los encuentros serán grabados así como la distancia entre los dos teléfonos. Cuando una persona reporta un diagnóstico positivo, la cadena aleatoria de caracteres o random ID de su teléfono es marcada para anónimamente notificar al resto de usuarios. No se compartirá la información sobre su localización ni ninguna información personal.",
     "last_days": "Los últimos 14 días",
     "learn_more": "Más información",
-    "more_info": "Más información sobre las notificaciones de exposición",
+    "more_info": "Conozca más acerca de las Notificaciones de Exposición",
     "no_connectivity_message": "¡No estás conectado a Internet!",
     "no_exposure_reports": "Ningún informe de exposición",
     "no_exposure_reports_over_past": "Usted no ha recibido ningún informe de exposición en los pasados 14 días",
@@ -195,18 +195,18 @@
     "why_did_i_get_an_en_para": "Usted recibirá un aviso de exposición cuando haya estado cerca de alguien que luego reciba un resultado positivo a COVID-19 y que haya decidido notificarlo."
   },
   "exposure_notification_alerts": {
-    "bluetooth_body": "Para activar las notificaciones de exposición, primero debe activar Bluetooth en su aplicación de configuración.",
+    "bluetooth_body": "Para activar las Notificaciones de Exposición, primero debe activar Bluetooth en su aplicación de Configuraciones.",
     "bluetooth_title": "Habilitar el Bluetooth",
-    "cant_check_for_exposures_body": "Debe habilitar las notificaciones de exposición para verificar las exposiciones.",
+    "cant_check_for_exposures_body": "Debe activar las Notificaciones de Exposición para buscar exposiciones.",
     "cant_check_for_exposures_button": "Habilitar Avisos de Exposición",
-    "cant_check_for_exposures_title": "No puedo verificar las exposiciones",
-    "set_active_region_ios_body": "Abra la aplicación Configuración, navegue hasta la configuración de Notificaciones de exposición para esta aplicación, luego presione 'Establecer como región activa'.",
-    "set_active_region_ios_title": "Establecer región activa",
-    "share_exposure_information_ios_body": "Abra la aplicación Configuración, luego navegue a la configuración de Notificaciones de exposición para esta aplicación. Asegúrese de que 'Compartir información de exposición' esté activado, luego presione 'Establecer como región activa'.",
+    "cant_check_for_exposures_title": "No pueden buscarse las Exposiciones.",
+    "set_active_region_ios_body": "Abra la aplicación de Configuraciones y navegue hasta las configuraciones de Notificaciones de Exposición para esta aplicación y presione ‘Fijar como región activa’.",
+    "set_active_region_ios_title": "Fijar región activa",
+    "share_exposure_information_ios_body": "Abra la aplicación de Configuraciones y navegue hasta las configuraciones de Notificaciones de Exposición para esta aplicación. Asegúrese de activar ’Compartir Información de Exposición', presione 'Fijar como región activa'.",
     "share_exposure_information_ios_title": "Compartir información de exposición",
-    "unhandled_error_body": "Ocurrió algo inesperado. Cierre y vuelva a abrir la aplicación y vuelva a intentarlo.",
+    "unhandled_error_body": "Sucedió algo inesperado. Por favor, cierre la aplicación, ábrala de nuevo y vuelva a intentarlo.",
     "unhandled_error_title": "Algo salió mal",
-    "use_exposure_notifications_android_body": "Para habilitar las notificaciones de exposición, vaya a la pantalla de notificaciones de exposición COVID-19 de su aplicación de configuración y habilite 'Usar notificaciones de exposición'.",
+    "use_exposure_notifications_android_body": "Para activar las Notificaciones de Exposición, vaya a la pantalla de Notificaciones de Exposición al COVID-19 en la aplicación de Configuraciones y active ‘Usar Notificaciones de Exposición'.",
     "use_exposure_notifications_android_title": "Habilitar Avisos de Exposición"
   },
   "exposure_scanning_status": {
@@ -251,11 +251,11 @@
     "take_assessment": "Tomar evaluación",
     "to_submit_your_test": "Para obtener el código de resultado de la prueba, deberá hablar con un rastreador de contactos.",
     "verification_code_card": {
-      "if_you_have_a_code": "Envíe su código de verificación para ayudar a mantener segura su comunidad.",
-      "if_you_have_a_positive_test": "Si ha dado positivo en la prueba de COVID-19, puede informar la prueba de forma anónima para ayudar a mantener segura a su comunidad.",
-      "more_info": "¿Qué es un código de verificación?",
-      "report_positive_test": "Informar prueba positiva",
-      "submit_code": "Ingrese el código"
+      "if_you_have_a_code": "Envíe su código de verificación para ayudar a mantener segura a su comunidad.",
+      "if_you_have_a_positive_test": "Si el resultado de su prueba para COVID-19 fue positivo, puede informar sobre la prueba de forma anónima para ayudar a mantener segura a su comunidad.",
+      "more_info": "¿Qué es el código de verificación?",
+      "report_positive_test": "Informar sobre prueba positiva",
+      "submit_code": "Introduzca el código"
     }
   },
   "label": {
@@ -520,15 +520,15 @@
     "trouble_breathing": "Dificultad para respirar"
   },
   "verification_code_alerts": {
-    "code_used_body": "El código de verificación proporcionado ya se ha utilizado.",
-    "code_used_title": "Código de verificación ya utilizado",
-    "invalid_code_body": "El código de verificación que envió no es válido.\n\nEl código debe ser un código de verificación válido que le haya proporcionado su autoridad sanitaria.\n\nTambién es posible que su código haya caducado. Si es así, deberá solicitar un nuevo código a su autoridad sanitaria.",
-    "invalid_code_title": "Codigo invalido",
-    "network_connection_body": "Debes estar conectado a WiFi para enviar un código de verificación.",
-    "network_connection_title": "Sin conexión a Internet",
-    "timeout_body": "Se tardó mucho en enviar el código de verificación. Por favor, inténtelo de nuevo más tarde.",
-    "timeout_title": "La presentación tardó demasiado",
-    "unknown_body": "Ocurrió un error inesperado. Inténtalo de nuevo.",
+    "code_used_body": "El código de verificación introducido ya fue utilizado.",
+    "code_used_title": "Este código de verificación ya fue utilizado",
+    "invalid_code_body": "El código de verificación que envió es inválido.\n\nEl código de verificación debe ser un código válido emitido por su autoridad de salud.\n\nTambién es posible que el código haya caducado. De ser así, tendrá que solicitar un nuevo código a su autoridad de salud.",
+    "invalid_code_title": "Código inválido",
+    "network_connection_body": "Para enviar el código de verficación debe estar conectado a WiFi.",
+    "network_connection_title": "No hay conexión a internet",
+    "timeout_body": "Tomó demasiado tiempo enviar el código de verificación. Por favor, intente más tarde.",
+    "timeout_title": "El envío tardó demasiado",
+    "unknown_body": "Ocurrió un error inesperado. Por favor, intente de nuevo.",
     "unknown_title": "Algo salió mal"
   }
 }
