work in progress.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -187,7 +187,7 @@
     "no_connectivity_message": "You are not connected to the internet!",
     "no_exposure_reports": "No Exposure Reports",
     "no_exposure_reports_over_past": "You haven't received any exposure reports over the past 14-days",
-    "possible_exposure": "Possible COVID-19 exposure",
+    "possible_exposure": "Possible Exposure",
     "protect_yourself_and_others": "Protect yourself and others in your community",
     "review_guidance_from_ha": "Review guidance from {{healthAuthorityName}}",
     "updated": "Updated",
