--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,7 +128,11 @@
     }
   },
   "exposure_history": {
+    "exposure_summary": "Someone you were near between {{startDate}} and {{endDate}} tested positive for COVID-19.",
     "check_for_exposures": "Check for exposures",
+    "days_remaining": "Days remaining in quarantine",
+    "summary": "Summary",
+    "all_exposures": "All Exposures",
     "exposure_detail": {
       "2m_apart": "2m apart",
       "6ft_apart": "6ft apart",
