--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -132,14 +132,16 @@
     "check_for_exposures": "Check for exposures",
     "days_remaining": "Days remaining in quarantine",
     "summary": "Summary",
-    "all_exposures": "All Exposures",
+    "possible_exposures": "Possible Exposures",
+    "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result.",
+    "next_steps": "Next Steps",
     "exposure_detail": {
       "2m_apart": "2m apart",
       "6ft_apart": "6ft apart",
       "general_guidance": "General Guidance",
       "ha_guidance_header": "What should I do?",
       "header": "Someone you were nearby has since tested positive for COVID-19.",
-      "next_steps": "Next steps",
+      "next_steps": "Health guidelines",
       "personalize_my_guidance": "Personalize my guidance",
       "quarantine": "Quarantine",
       "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
