--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -134,7 +134,7 @@
       "6ft_apart": "6ft apart",
       "general_guidance": "General Guidance",
       "ha_guidance_header": "What should I do?",
-      "header": "Someone you were nearby has since tested positive for COVID-19.",
+      "header": "Someone you were near has since tested positive for COVID-19.",
       "next_steps": "Next steps",
       "personalize_my_guidance": "Personalize my guidance",
       "quarantine": "Quarantine",
