Style covid data
Why:
Currently the covid data feature is not styled. We would like to apply
some basic styling to the feature to make the UX more effective.

This commit:
Adds some styling to the covid data card and dashboard. We introduced
colors for the risk level as well.

Co-Authored-By: John Schoeman <johnschoeman1617@gmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,16 +42,17 @@
   },
   "covid_data": {
     "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
-    "daily_new_cases": "Daily new cases",
+    "covid_stats": "COVID-19 Stats",
+    "daily_new_cases": "Daily new cases per 100k",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
     "infection_rate": "Infection rate",
     "new_cases": "New Cases",
-    "past_7_days": "Past 7 days",
+    "past_days": "New cases per day, past {{days}} days",
     "per_100k": "per 100k",
     "positive_test_rate": "Positive test rate",
     "see_more": "See more",
     "source": "source: {{source}}",
-    "spread_of_the_virus_in": "Spread of the virus in {{locationName}}",
+    "overall_risk_level_in": "Overall Risk Level in {{locationName}}",
     "trending_down": "Trending down",
     "trending_up": "Trending up"
   },
