Introduce healthcheck link
Why:
We would like to optionally include an external link to a healthcheck or
symptom checker web application.

This commit:
Introduces the component and basic configuration for a healthcheck link.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -198,19 +198,23 @@
       "location_subheader": "{{applicationName}} never accesses your location data and your device is never tracked.",
       "proximity_tracing_header": "Exposure Notifications",
       "share": "Share {{applicationName}}",
-      "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadLink}}",
+      "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadUrl}}",
       "tracing_off_header": "Exposure Detection Off",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
     "check_if_your_symptoms": "Enter your symptoms and get an instant recommendation on how to stay safe.",
     "enter_symptoms": "Enter symptoms",
+    "error": {
+      "share_link_failed": "Failed to open link to share"
+    },
     "fix": "Fix issues with {{technology}}",
     "get_more_info": "Get more info on {{technology}}",
     "have_a_positive_test": "Have a positive test?",
     "location_info_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. {{applicationName}} does NOT track or keep a record of your location.",
     "location_info_subheader": "{{applicationName}} does not track or keep a record of your location",
     "not_feeling_well": "Not feeling well?",
+    "open_healthcheck": "Open Healthcheck",
     "proximity_tracing_info_body_1": "If smartphones with the app installed are turned on, have Bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_info_body_2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
     "proximity_tracing_info_subheader_1": "How does Exposure Notifications work?",
